--- a/src/composer.json
+++ b/src/composer.json
@@ -10,6 +10,7 @@
         "cakephp/cakephp": "4.4.*",
         "cakephp/migrations": "^3.2",
         "cakephp/plugin-installer": "^1.3",
+        "fzaninotto/faker": "^1.9",
         "mobiledetect/mobiledetectlib": "^2.8"
     },
     "require-dev": {
