--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -2,8 +2,8 @@
 FROM php:7.4-apache
 
 # 設定ファイルをdockerコンテナ内のPHP、Apacheに読み込ませる
-ADD php.ini /usr/local/etc/php/
-ADD 000-default.conf /etc/apache2/sites-enabled/
+ADD ./docker/app/php.ini /usr/local/etc/php/
+ADD ./docker/app/000-default.conf /etc/apache2/sites-enabled/
 
 # Composerのインストール
 RUN cd /usr/bin && curl -s http://getcomposer.org/installer | php && ln -s /usr/bin/composer.phar /usr/bin/composer
@@ -19,6 +19,10 @@ libpng-dev \
 libpq-dev \
 libicu-dev \
 && docker-php-ext-install pdo_mysql intl
+
+COPY ./src/composer.json ./src/composer.lock /var/www/html/
+RUN composer install
+# RUN ../../src/vendor/ /var/www/html/vendor/
 
 # Laravelで必要になるmodRewriteを有効化する
 RUN mv /etc/apache2/mods-available/rewrite.load /etc/apache2/mods-enabled
